[package]
name = "alltools"
version = "0.1.0"
authors = ["Jacques Heunis <jaaksemail@gmail.com>"]
edition = "2018"

[dependencies]
atty = "0.2"
byteorder = "1.3.4"
chrono = "0.4"
getopts = "0.2"
rand = "0.7.3"
ipconfig = "0.2.2"
terminal_size = "0.1.17"
colored = "2"

# NOTE: Cargo will automatically compile every file in src/bin/*.rs into an executable with the same name as the file

